<resources>
    <string name="app_name">JointYearbookRedo</string>
    <string name="welcome_to_the_joint_yearbook_redo">Welcome to the Joint Yearbook Redo!</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="danny_s_yearbook">Danny\'s Yearbook</string>
    <string name="button">Button</string>
    <string name="button1">Button</string>
    <string name="button2">Button</string>
    <string name="hello_there">Hello There!</string>
    <string name="this_is_jericho_from_the_hit_show_arcane">This is Jericho from the hit show Arcane</string>
    <string name="todo">TODO</string>

</resources>